// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button  matches snapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`button  matches snapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  click me please
</div>
`;
